tests/core/negative/control/branch_mismatch.vais
fn main() -> i64 {
    value: i64 := I true { 1 } else { "bad" }
    return value
}
